[package]
name = "aoc18"
version = "0.1.0"
edition = "2024"

[dependencies]
aho-corasick = "1.1.3"
clap = { version = "4.5.47", features = ["derive"] }
http = "1.3.1"
itertools = "0.14.0"
log = "0.4.28"
pretty_env_logger = "0.5.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking", "cookies"] }
serde = "1.0.219"
toml = "0.9.5"

[dev-dependencies]
httptest = "0.16.3"
test-log = "0.2.18"
yare = "3.0.0"
